# p2psn

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  DevelopmentBlog.md  README.md  full_polinomial_stream_traits.cpp~  full_polynomial.h  full_polynomial.h~  full_polynomial_stream_traits.cpp  full_polynomial_stream_traits.cpp~  full_polynomial_stream_traits.h  full_polynomial_stream_traits.h~  full_polynomial_tests.cpp~  full_polynomial_tests.h  full_polynomial_tests.h~  main.cpp  main.cpp~  math.kdev4  node.geany  test_task.cpp  test_task.cpp~  test_task.h  test_task.h~
.kdev4/: _custom.kdev4  math.kdev4
bitsetint/: bitsetint.cpp  bitsetint.cpp~  bitsetint.h  bitsetint.h~  bitsetint_imp.h  bitwidthint.h~
docs/: Peer 2 Peer Social Network.md  Peer 2 Peer Social Network.odt
hello_world/: Makefile  config.js  hello.sh  node.sh
make_structure/: Makefile
math/: CMakeLists.txt  main.cpp
math/.kdev4/: math.kdev4
math/bitsetint/: bitsetint.cpp
math/docs/: .~lock.Peer 2 Peer Social Network.odt#
math/polynomial/: full_polynomial.h  monome.h
math/tests/: CMakeLists.txt
math/utils/: array_operations.h
modulu/: mod.cpp  mod.h  mod.h~  mod_stream_traits.cpp  mod_stream_traits.cpp~  mod_stream_traits.h  mod_stream_traits.h~  modulu.cpp~  modulu.h~
node/: .cproject  .gitignore  .project  Doxyfile  Makefile  node.cmd  node.sh  noded  version.md
polynomial/: full_polynomial.cpp  full_polynomial.h  full_polynomial_stream_traits.cpp  full_polynomial_stream_traits.h
separated_tmpl_sample/: .gitignore  Makefile  Makefile.auto_dependancies  Makefile.combined  (+2 more)
(+278 files in other folders)
